1.1.7
1. 添加：升级为JDK17后过期方法，或不安全的方法
2. 删除：内网环境下额外的POM配置
3. 添加：解决Maven依赖冲突